# open-meteo-mcp

./: CLAUDE.md  README.md  README_TESTING.md  claude-desktop-config.json  conftest.py  open_meteo_server.py  pyproject.toml  pytest.ini  test_open_meteo_server.py  test_server.py
.claude/: settings.local.json
